src/tui/tests/snapshots/keyring_cli__tui__tests__visual_regression_tests__tuiapp_initial_render_narrow.snap
---
source: src/tui/tests/visual_regression_tests.rs
expression: output
---
┌ OpenKeyring TUI ─────────────────────┐
│OpenKeyring TUI v0.1.0                │
│Type /help for available commands     │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
┌──────────────────────────────────────┐
│> Type a command...                   │
└──────────────────────────────────────┘
┌──────────────────────────────────────┐
