src/tui/tests/snapshots/keyring_cli__tui__tests__visual_regression_tests__tuiapp_long_command_render.snap
---
source: src/tui/tests/visual_regression_tests.rs
expression: output
---
┌ OpenKeyring TUI ─────────────────────────────────────────────────────────────┐
│OpenKeyring TUI v0.1.0                                                        │
│Type /help for available commands                                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│> /show this-is-a-very-long-record-name-that-might-wrap                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
