src/tui/tests/snapshots/keyring_cli__tui__tests__visual_regression_tests__tuiapp_render_input_sequence.snap
---
source: src/tui/tests/visual_regression_tests.rs
expression: seq.to_string()
---
Sequence: input_render_sequence

Step 1: initial
──────────────
┌ [1] Groups ──────────────┐┌ [3] Details ─────────────────────────────────────┐
│[+] Work (5)              ││                                                  │
│[+] Personal (4)          ││OpenKeyring                                       │
│[+] Others (2)            ││Privacy-first Password Manager                    │
│                          ││                                                  │
│                          ││Version: v0.1.0                                   │
│                          ││License: MIT License                              │
│                          ││Website: github.com/open-keyring                  │
│                          ││                                                  │
│                          ││Press [n] to create your first password           │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
└──────────────────────────┘│                                                  │
┌ [2] Filters ─────────────┐│                                                  │
│[ ] 📋  All                │└──────────────────────────────────────────────────┘
│[ ] 🗑 Trash               │┌ [4] Status ──────────────────────────────────────┐
│[ ] ⏰  Expired            ││OpenKeyring v0.1.0                                │
│[ ] ⭐  Favorite           ││Stats: Coming soon                                │
│                          ││                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────┘
Focus: Tree | [1-3] Switch | [j/k] Navigate | [q] Quit

Step 2: with_input
─────────────────
┌ [1] Groups ──────────────┐┌ [3] Details ─────────────────────────────────────┐
│[+] Work (5)              ││                                                  │
│[+] Personal (4)          ││OpenKeyring                                       │
│[+] Others (2)            ││Privacy-first Password Manager                    │
│                          ││                                                  │
│                          ││Version: v0.1.0                                   │
│                          ││License: MIT License                              │
│                          ││Website: github.com/open-keyring                  │
│                          ││                                                  │
│                          ││Press [n] to create your first password           │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
└──────────────────────────┘│                                                  │
┌ [2] Filters ─────────────┐│                                                  │
│[ ] 📋  All                │└──────────────────────────────────────────────────┘
│[ ] 🗑 Trash               │┌ [4] Status ──────────────────────────────────────┐
│[ ] ⏰  Expired            ││OpenKeyring v0.1.0                                │
│[ ] ⭐  Favorite           ││Stats: Coming soon                                │
│                          ││                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────┘
Focus: Tree | [1-3] Switch | [j/k] Navigate | [q] Quit

Step 3: after_submit
───────────────────
┌ [1] Groups ──────────────┐┌ [3] Details ─────────────────────────────────────┐
│[+] Work (5)              ││                                                  │
│[+] Personal (4)          ││OpenKeyring                                       │
│[+] Others (2)            ││Privacy-first Password Manager                    │
│                          ││                                                  │
│                          ││Version: v0.1.0                                   │
│                          ││License: MIT License                              │
│                          ││Website: github.com/open-keyring                  │
│                          ││                                                  │
│                          ││Press [n] to create your first password           │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
└──────────────────────────┘│                                                  │
┌ [2] Filters ─────────────┐│                                                  │
│[ ] 📋  All                │└──────────────────────────────────────────────────┘
│[ ] 🗑 Trash               │┌ [4] Status ──────────────────────────────────────┐
│[ ] ⏰  Expired            ││OpenKeyring v0.1.0                                │
│[ ] ⭐  Favorite           ││Stats: Coming soon                                │
│                          ││                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────┘
Focus: Tree | [1-3] Switch | [j/k] Navigate | [q] Quit
