src/tui/tests/snapshots/keyring_cli__tui__tests__visual_regression_tests__tuiapp_short_terminal_render.snap
---
source: src/tui/tests/visual_regression_tests.rs
expression: output
---

⚠ Terminal too small

Current: 80x10
Required: 80x24

Please resize your terminal
