src/tui/tests/snapshots/keyring_cli__tui__tests__visual_regression_tests__tuiapp_statusline_at_different_widths.snap
---
source: src/tui/tests/visual_regression_tests.rs
expression: seq.to_string()
---
Sequence: statusline_widths

Step 1: narrow_statusline
────────────────────────
 Unsynced

Step 2: full_statusline
──────────────────────
🔓  0 rec | Unsynced | v0.1.0 | Ctrl+N new | Ctrl+Q quit

Step 3: wide_statusline
──────────────────────
🔓  0 rec | Unsynced | v0.1.0 | Ctrl+N new | Ctrl+L list | Ctrl+Q quit
