src/tui/tests/snapshots/keyring_cli__tui__tests__visual_regression_tests__tuiapp_tall_terminal_render.snap
---
source: src/tui/tests/visual_regression_tests.rs
expression: output
---
┌ [1] Groups ──────────────┐┌ [3] Details ─────────────────────────────────────┐
│[+] Work (5)              ││                                                  │
│[+] Personal (4)          ││OpenKeyring                                       │
│[+] Others (2)            ││Privacy-first Password Manager                    │
│                          ││                                                  │
│                          ││Version: v0.1.0                                   │
│                          ││License: MIT License                              │
│                          ││Website: github.com/open-keyring                  │
│                          ││                                                  │
│                          ││Press [n] to create your first password           │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
└──────────────────────────┘│                                                  │
┌ [2] Filters ─────────────┐│                                                  │
│[ ] 📋  All                ││                                                  │
│[ ] 🗑 Trash               ││                                                  │
│[ ] ⏰  Expired            │└──────────────────────────────────────────────────┘
│[ ] ⭐  Favorite           │┌ [4] Status ──────────────────────────────────────┐
│                          ││OpenKeyring v0.1.0                                │
│                          ││Stats: Coming soon                                │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
│                          ││                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────┘
Focus: Tree | [1-3] Switch | [j/k] Navigate | [q] Quit
