src/tui/tests/snapshots/keyring_cli__tui__tests__visual_regression_tests__tuiapp_very_narrow_render.snap
---
source: src/tui/tests/visual_regression_tests.rs
expression: output
---
┌ [1] Grou┐┌ [3] Details ────┐
│[+] Work ││                 │
│[+] Perso││OpenKeyring      │
│[+] Other││Privacy-first    │
│         ││Password Manager │
│         ││                 │
│         ││Version: v0.1.0  │
│         ││License: MIT     │
│         ││License          │
│         ││Website:         │
│         ││github.com/open-k│
│         ││eyring           │
│         ││                 │
│         ││Press [n] to     │
│         ││create your first│
└─────────┘│password         │
┌ [2] Filt┐│                 │
│[ ] 📋  Al│└─────────────────┘
│[ ] 🗑 Tra│┌ [4] Status ─────┐
│[ ] ⏰  Ex││OpenKeyring v0.1.│
│[ ] ⭐  Fa││Stats: Coming soo│
│         ││                 │
└─────────┘└─────────────────┘
Focus: Tree | [1-3] Switch | [
